# socialnet

./: CMakeLists.txt  package.xml
python_layers/: PInSoRoDataset.py  timeline.py
share/models/: socialnet.prototxt  train.prototxt
src/: train.cpp
